# Open-Log-Stream-Analysis

./: .clang-format  .gitignore  CMakeLists.txt  README.md  olspython.py  parse_log_2.py
.scanoss/: scanoss-raw.json
UI/: CMakeLists.txt  Ols.pro  diagramitem.h  diagramscene.pro  diagramscene.pro.user.32e7e9f  double-slider.cpp  double-slider.h  main.cpp  mainwindow.cpp  mainwindow.h  olsapp.cpp  olsapp.h  plain-text-edit.cpp  plain-text-edit.h  properties-view.cpp  properties-view.h  qt-wrappers.cpp  qt-wrappers.h  qtproject.pri  slider-ignorewheel.cpp  slider-ignorewheel.h  spinbox-ignorewheel.cpp  spinbox-ignorewheel.h  vertical-scroll-area.cpp  vertical-scroll-area.h
UI/app/: CMakeLists.txt  app.pro
UI/cmake/: QtCanpoolAPI.cmake
UI/forms/: OLSBasicProperties.h  OLSBasicProperties.ui  OLSBasicProperties.ui.autosave  OLSBasicPropertiescpp.cpp
UI/lib/: CMakeLists.txt  lib.pro
build-aux/: README.md  format-manifest.py
build-aux/.functions/: log_debug  log_error
build-aux/modules/: 20-srt.json  40-plog.json  50-jansson.json  50-pipewire.json.disabled  90-websocketpp.json
cmake/32bit/: projects.cmake
cmake/Modules/: CompilerConfig.cmake  CopyMSVCBins.cmake  Find7zWindows.cmake  FindLibUUID.cmake  FindLuajit.cmake  FindPythonWindows.cmake  FindWebsocketpp.cmake  FindXSLTPROC.cmake  FindXSLTPROCWindows.cmake  FindZLIB.cmake  IDLFileHelper.cmake  OlsDefaults_Linux.cmake  OlsDefaults_Windows.cmake  OlsDefaults_macOS.cmake  OlsHelpers.cmake  OlsHelpers_Linux.cmake  OlsHelpers_Windows.cmake  OlsHelpers_macOS.cmake  VersionConfig.cmake
cmake/common/: bootstrap.cmake  buildnumber.cmake  buildspec_common.cmake  ccache.cmake  compiler_common.cmake  cpackconfig_common.cmake  helpers_common.cmake  osconfig.cmake  versionconfig.cmake
cmake/macos/: buildspec.cmake  compilerconfig.cmake  defaults.cmake  helpers.cmake  xcode.cmake
example/: CMakeLists.txt  parse_test.cpp
libelement/: OlsBaseSink.hpp  OlsBaseSource.hpp  OlsBuffer.hpp  OlsCore.cpp  OlsCore.hpp  OlsElement.hpp  OlsEvent.hpp  OlsMessage.hpp  OlsPad.cpp  OlsPad.hpp  ols-cocoa.m  ols-data.h  ols-module.c  ols-module.h  ols-nix.c  ols-nix.h  ols-properties.c  ols-windows.c  ols.c  ols.h
libelement/util/: base.c  (+4 more)
libols/: CMakeLists.txt  ols-buffer-list.c  ols-buffer-list.h  ols-buffer.c  ols-buffer.h  ols-caps.c  ols-caps.h  ols-cocoa.m  ols-config.h  ols-context.h  ols-data.c  ols-data.h  ols-defs.h  ols-event.c  ols-event.h  ols-hotkey-name-map.c  ols-hotkey.c  ols-hotkey.h  ols-hotkeys.h  ols-interaction.h  ols-internal.h  ols-meta-result.c  ols-meta-result.h  ols-meta-txt.c  ols-meta-txt.h  ols-meta.h  ols-mini-object.c  ols-mini-object.h  ols-module.c  ols-module.h  ols-nix.c  ols-nix.h  ols-output.c  ols-output.h  ols-pad.c  ols-pad.h  ols-pipeline.c  ols-pipeline.h  ols-process.c  ols-process.h  (+14 more)
libols/callback/: proc.c
libols/cmake/: legacy.cmake  ols-version.cmake  os-freebsd.cmake  os-linux.cmake  os-macos.cmake  os-windows.cmake
libols/cmake/windows/: ols-module.rc.in
libols/util/: array-serializer.c  base.c  base.h  bmem.c  c99defs.h  cf-parser.c  cf-parser.h  circlebuf.h  config-file.c  debug.h  deque.h  dstr.h  file-serializer.c  lexer.h  mempool.c  mempool.h  pipe-posix.c  pipe-windows.c  platform-nix-dbus.c  platform-nix-portal.c  platform-nix.c  platform-windows.c  platform.c  platform.h  serializer.h  str-util.c  str-util.h  task.c  task.h  taskpool.c  taskpool.h  text-lookup.c  text-lookup.h  threading-posix.c  threading-posix.h  threading-windows.c  threading-windows.h  time-parse.c  time-parse.h  utf8.c  (+2 more)
libols/util/curl/: curl-helper.h
libols/util/windows/: ComPtr.hpp  WinHandle.hpp  device-enum.c  obfuscate.c  win-registry.h  window-helpers.c  window-helpers.h
log-stream/: CMakeLists.txt
lua_script/: parse_log.lua
plugins/: CMakeLists.txt
plugins/file/: CMakeLists.txt
plugins/file/textdocument/: ols-text.cpp
plugins/output/: CMakeLists.txt
plugins/output/xmlOutput/: CMakeLists.txt  ols-xml-output.cpp  template.xslt
plugins/output/xmlOutput/cmake/windows/: ols-module.rc.in
plugins/process/: CMakeLists.txt
plugins/process/dispatch/: CMakeLists.txt  ols-data-dispatch.cpp
plugins/process/dispatch/cmake/windows/: ols-module.rc.in
plugins/process/scriptCaller/: CMakeLists.txt  ols-script-caller.cpp
plugins/process/scriptCaller/cmake/windows/: ols-module.rc.in
plugins/process/statistics/: CMakeLists.txt  ols-data-statistics.cpp
plugins/process/statistics/cmake/windows/: ols-module.rc.in
plugins/source/file/: CMakeLists.txt
plugins/source/file/cmake/: legacy.cmake
plugins/source/file/cmake/windows/: ols-module.rc.in
plugins/source/file/textdocument/: ols-text.cpp
plugins/source/text/: CMakeLists.txt
python_script/: parse_log_2.py
script_lua/: CMakeLists.txt
script_python/: CMakeLists.txt  exampleGbParse.py  olsString.py  parse_log_2.py  run_pipeline.py  script_others.py
test/: VW381040010_20250321T201935.html  template.html
test/test_cpp_py/multi_return/: CMakeLists.txt  multi_ret.cpp  return_values.py
test/test_cpp_py/ret_str_list/: CMakeLists.txt  test_str_list.c
test/test_cpp_py/return_dict/: CMakeLists.txt  parse_dict.cpp  return_dict.py
test/test_flowchart_dy/: CMakeLists.txt  README.md  main.cpp  resource.qrc
test/test_flowchart_dy/config/: config.ini  test.json
test/test_flowchart_dy/flowchart_dy_autogen/: moc_predefs.h  mocs_compilation.cpp
test/test_flowchart_dy/flowchart_dy_autogen/EWIEGA46WW/: qrc_resource.cpp
test/test_flowchart_dy/flowchart_dy_autogen/UVLADIE3JM/: moc_FlowChartScene.cpp  moc_FlowChartView.cpp  moc_mainwindow.cpp  moc_systemimagewidget.cpp
test/test_flowchart_dy/flowchart_dy_autogen/include/: ui_mainwindow.h  ui_systemimagewidget.h
test/test_flowchart_dy/src/: FlowChartScene.cpp  FlowChartScene.h  FlowChartView.cpp  FlowChartView.h  FlowEdge.cpp  FlowEdge.h  FlowNode.cpp  FlowNode.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  systemimagewidget.cpp  systemimagewidget.h  systemimagewidget.ui
test/test_pcre/: CMakeLists.txt  pcre2demo.c
test/test_tinyxml/: CMakeLists.txt  test_tinyxml.cpp
(+407 files in other folders)
